# cpp-scratch

./: .gitignore  CMakeLists.txt  README.md  autogen.sh
src/: CMakeLists.txt  functional.cpp  functional.h  trie.cpp  trie.h
tests/: CMakeLists.txt  test_trie.cpp
